fix some header spacings

--- a/components/form/body/FormBody.module.scss
+++ b/components/form/body/FormBody.module.scss
@@ -2,5 +2,6 @@
 
 .container {
   border-radius: 8px;
-  background-color: $color-base;
+  background-color: $white;
+  padding-top: 64px;
 }
