--- a/components/form/body/Headings.module.scss
+++ b/components/form/body/Headings.module.scss
@@ -7,13 +7,13 @@
 %blue-label {
   font-size: $p1-size;
   font-weight: bold;
-  color: $blue
+  color: $blue;
 }
 
 %grey-label {
   font-size: $p2-size;
   color: $light-grey;
-  margin: 0;
+  margin: 6px 0px 36px 0px;
 }
 
 .left {
