--- a/components/form/header/ZipCodeInput.module.scss
+++ b/components/form/header/ZipCodeInput.module.scss
@@ -4,6 +4,10 @@
   @extend %header-input-container;
   @extend %form-row-flex-child-right;
 
+  label {
+    font-size: $p1-size;
+  }
+
   input {
     @extend %header-input;
   }
