--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -1,5 +1,5 @@
 // body colors
-$color-background: #E5E5E5;
+$color-background: #F6F6F7;
 $color-base: #F5F5F5;
 $white: #FFFFFF;
 $black: #151515;
@@ -79,4 +79,6 @@ $p2-size: 13px;
   border-radius: 8px;
   border: 1px solid #7B7B7B;
   padding: 6px;
+  width: 216px;
+  margin-top: 12px;
 }
